# C-Shell

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  main.c
.github/workflows/: build.yml
docs/: api.md  development.md  usage.md
include/: shell.h
include/builtins/: builtins.h
include/command/: command.h  executor.h  redirection.h
include/completion/: completion.h  matcher.h
include/terminal/: input.h  terminal.h
include/utils/: error.h  string.h  utils.h
src/: CMakeLists.txt  main.c
src/builtins/: builtins.c
src/command/: executor.c  input.c  parser.c  process_command.c  terminal.c
src/completion/: completion.c  matcher.c
src/utils/: error.c  path.c  string.c  utils.c
tests/: CMakeLists.txt  run_tests.sh
tests/fixtures/: basic_commands.txt  test_basic.sh  test_framework.h
tests/framework/: test_framework.c  test_runner.c  test_runner.h
tests/integration/: run_integration_tests.sh.in
tests/unit/: test_main.c  test_parser.c  test_utils.c
tools/: code_analyzer.py  performance_test.sh
